added examples updated documentation refactor to reduce generics use added support for config endpoint